fix close button and test tap on mobile (1)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,7 +514,14 @@ input[type="range"]::-ms-thumb {
   width: 100%;
   height: 100%;
 }
-.list-songs_icon,
+.list-songs_icon {
+  width: 50px;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
 .close,
 .closeLovePlaylist {
   width: 50px;
